<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/tvAsciiMap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_2x"
        android:textAlignment="center"
        android:textScaleX="1.5"
        android:textSize="15sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Lorem Ipsum some long text that has 2 lines length" />

    <TextView
        android:id="@+id/tvPath"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_1x"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/tvAsciiMap"
        app:layout_constraintStart_toStartOf="@id/tvAsciiMap"
        app:layout_constraintTop_toBottomOf="@id/tvAsciiMap"
        tools:text="Lorem Ipsum some long text that has 2 lines length" />

    <TextView
        android:id="@+id/tvLetters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_2x"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/tvPath"
        app:layout_constraintStart_toStartOf="@id/tvPath"
        app:layout_constraintTop_toBottomOf="@id/tvPath"
        tools:text="Lorem Ipsum some long text that has 2 lines length" />

    <Button
        android:id="@+id/btnSelectSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_2x"
        android:text="@string/choose_source"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>